welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:7: error: missing parameter type
  if (temp1=>100) {
      ^icyHot:8: error: value =< is not a member of Int
    if (temp2=<0) {
             ^icyHot:8: error: type mismatch;
 found   : Unit
 required: Boolean
    if (temp2=<0) {
    ^